--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,9 @@
 							<shadedClassifierName>shaded</shadedClassifierName>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+									<resource>logback.xml</resource>
+								</transformer>
 							</transformers>
 						</configuration>
 					</execution>
