--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<artifactId>gcs-maven</artifactId>
 	<packaging>jar</packaging>
 	<version>5.1.0-hubspot-SNAPSHOT</version>
-	<name>Amazon Web Services S3 Maven Wagon Support</name>
-	<description>Standard Maven wagon support for s3:// urls</description>
+	<name>GCS Maven Wagon Support</name>
+	<description>Standard Maven wagon support for gcs:// urls</description>
 
 	<properties>
 		<gcs.version>1.96.0</gcs.version>
@@ -124,7 +124,7 @@
 		</plugins>
 	</build>
 
-	<url>https://github.com/spring-projects/aws-maven</url>
+	<url>https://github.com/HubSpot/gcs-maven</url>
 
 	<inceptionYear>2007</inceptionYear>
 
@@ -137,31 +137,8 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:https://github.com/spring-projects/aws-maven.git</connection>
-		<url>https://github.com/spring-projects/aws-maven</url>
+		<connection>scm:git:https://github.com/HubSpot/gcs-maven.git</connection>
+		<url>https://github.com/HubSpot/gcs-maven</url>
 	</scm>
-
-	<organization>
-		<name>Spring Framework</name>
-		<url>http://spring.io</url>
-	</organization>
-
-	<ciManagement>
-		<system>Bamboo</system>
-		<url>https://build.springsource.org/browse/BUILD-AWSMAVEN</url>
-	</ciManagement>
-
-	<issueManagement>
-		<system>Github</system>
-		<url>https://github.com/spring-projects/aws-maven/issues</url>
-	</issueManagement>
-
-	<developers>
-		<developer>
-			<id>nebhale</id>
-			<name>Ben Hale</name>
-			<email>bhale@gopivotal.com</email>
-		</developer>
-	</developers>
 
 </project>
